# siumai

./: .gitignore  CHANGELOG.md  CHANGELOG_VIDEO_GENERATION.md  Cargo.toml  README.md  release-plz.toml
crates/siumai-core/: Cargo.toml  README.md
crates/siumai-provider-anthropic/: Cargo.toml
crates/siumai-provider-gemini/: Cargo.toml
crates/siumai-provider-groq/: Cargo.toml
crates/siumai-provider-minimaxi/: Cargo.toml
crates/siumai-provider-openai-compatible/: Cargo.toml
siumai/: Cargo.toml  build.rs
siumai-bridge/: CHANGELOG.md  Cargo.toml
siumai-bridge/src/: contracts.rs  customize.rs  lib.rs  lifecycle.rs  planner.rs  target_dispatch.rs  wrapper_macros.rs
siumai-core/: CHANGELOG.md  Cargo.toml
siumai-core/src/: client.rs  completion.rs  defaults.rs  embedding.rs  image.rs  lib.rs  rerank.rs  retry_api.rs  speech.rs  structured_output.rs  text.rs  tooling.rs  tools.rs  traits.rs  transcription.rs  types.rs  ui.rs  video.rs
siumai-core/tests/: core_provider_boundary_test.rs  gcp_auth_alignment_test.rs
siumai-extras/: CHANGELOG.md  Cargo.toml  README.md
siumai-extras/examples/: README.md  agent-pattern.rs  anthropic-to-openai-responses-gateway.rs  basic-orchestrator.rs  gateway-custom-transform.rs  gateway-loss-policy.rs  mcp-stdio-tools.rs  mcp-streamable-http-tools.rs  openai-responses-gateway.rs  openai-responses-to-anthropic-gateway.rs  opentelemetry_tracing.rs  stop-conditions.rs  streaming-orchestrator.rs  streaming-tool-execution.rs  tool-approval.rs  tool-loop-gateway.rs  workflow_planner_coder.rs
siumai-extras/src/: bridge.rs  client.rs  error.rs  lib.rs  mcp.rs  metrics.rs  otel.rs  otel_middleware.rs  performance.rs  schema.rs  server.rs  structured_output.rs  telemetry.rs  tool_runtime.rs  web_search.rs
siumai-extras/tests/: bridge_architecture_boundary_test.rs  gateway_axum_smoke_test.rs  gateway_request_ingress_axum_test.rs  gateway_request_ingress_sse_axum_test.rs  gateway_runtime_proxy_axum_test.rs  request_normalize_smoke_test.rs
siumai-protocol-anthropic/: CHANGELOG.md  Cargo.toml
siumai-protocol-anthropic/src/: lib.rs
siumai-protocol-anthropic/tests/: anthropic_streaming_feature_surface_test.rs
siumai-protocol-openai/: CHANGELOG.md  Cargo.toml
siumai-protocol-openai/src/: lib.rs
siumai-protocol-openai/tests/: openai_compat_boundary_test.rs  responses_sse_feature_surface_test.rs
siumai-provider-amazon-bedrock/: CHANGELOG.md  Cargo.toml
siumai-provider-amazon-bedrock/src/: lib.rs
siumai-provider-anthropic/: CHANGELOG.md  Cargo.toml
siumai-provider-anthropic-compatible/: CHANGELOG.md  Cargo.toml
siumai-provider-anthropic-compatible/src/: lib.rs
siumai-provider-anthropic/src/: hosted_tools.rs  lib.rs
siumai-provider-azure/: CHANGELOG.md  Cargo.toml
siumai-provider-azure/src/: lib.rs
siumai-provider-cohere/: CHANGELOG.md  Cargo.toml
siumai-provider-cohere/src/: lib.rs
siumai-provider-deepseek/: CHANGELOG.md  Cargo.toml
siumai-provider-deepseek/src/: lib.rs
siumai-provider-deepseek/tests/: config_first_http_convenience_test.rs
siumai-provider-gemini/: CHANGELOG.md  Cargo.toml
siumai-provider-gemini/src/: hosted_tools.rs  lib.rs
siumai-provider-google-vertex/: CHANGELOG.md  Cargo.toml
siumai-provider-google-vertex/src/: hosted_tools.rs  lib.rs  tools.rs
siumai-provider-google-vertex/tests/: gcp_auth_alignment_test.rs
siumai-provider-groq/: CHANGELOG.md  Cargo.toml
siumai-provider-groq/src/: lib.rs
siumai-provider-groq/tests/: config_first_http_convenience_test.rs
siumai-provider-minimaxi/: CHANGELOG.md  Cargo.toml
siumai-provider-minimaxi/src/: lib.rs
siumai-provider-openai/: CHANGELOG.md  Cargo.toml
siumai-provider-openai-compatible/: CHANGELOG.md  Cargo.toml
siumai-provider-openai-compatible/src/: lib.rs  macros.rs
siumai-provider-openai-compatible/tests/: provider_config_groq.rs
siumai-provider-openai/src/: hosted_tools.rs  lib.rs
siumai-provider-openai/tests/: openai_completion_stream_parse_error_test.rs
siumai-provider-togetherai/: CHANGELOG.md  Cargo.toml
siumai-provider-togetherai/src/: lib.rs
siumai-provider-xai/: CHANGELOG.md  Cargo.toml
siumai-provider-xai/src/: lib.rs
siumai-provider-xai/tests/: config_first_http_convenience_test.rs
siumai-providers/: Cargo.toml
siumai-providers/src/: builder.rs  lib.rs  macros.rs  model_catalog.rs
siumai-registry/: CHANGELOG.md  Cargo.toml
siumai-registry/examples/: no_builtins_custom_factory.rs
siumai-registry/src/: lib.rs  native_provider_metadata.rs  provider_builders.rs  provider_catalog.rs  test_support.rs
siumai-registry/tests/: factory_architecture_boundary_test.rs
siumai-spec/: CHANGELOG.md  Cargo.toml
siumai-spec/src/: lib.rs  tools.rs  types.rs
siumai-spec/tests/: ai_sdk_module_boundary_test.rs  chat_provider_helper_boundary_test.rs  content_projection_boundary_test.rs  http_config_boundary_test.rs  request_carrier_boundary_test.rs  spec_purity_boundary_test.rs  tools_boundary_test.rs  video_boundary_test.rs
siumai/examples/: README.md  complete_custom_provider.rs  custom_provider_spec.rs  executor_testing.rs  registry_quickstart.rs  tool-choice-demo.rs  usage-builder-demo.rs
siumai/src/: benchmarks.rs  builder.rs  client.rs  compat.rs  completion.rs  defaults.rs  embedding.rs  error.rs  experimental_bridge.rs  files.rs  image.rs  lib.rs  macros.rs  model_catalog.rs  performance.rs  provider.rs  provider_builders.rs  provider_catalog.rs  provider_ext.rs  request_options.rs  rerank.rs  retry_api.rs  skills.rs  speech.rs  std_anthropic.rs  std_gemini.rs  std_openai.rs  structured_output.rs  text.rs  tooling.rs  tools.rs  traits.rs  transcription.rs  types.rs  ui.rs  video.rs  web_search.rs
siumai/tests/: README.md  anthropic_extended_usage_fields_roundtrip_test.rs  anthropic_files_upload_alignment_test.rs  anthropic_messages_custom_transport_alignment_test.rs  anthropic_messages_fixtures_alignment_test.rs  anthropic_messages_request_bridge_roundtrip_fixtures_alignment_test.rs  anthropic_messages_request_normalization_fixtures_alignment_test.rs  anthropic_mock_api_test.rs  (+227 more)
(+3430 files in other folders)
