[workspace]
resolver = "2"
members = [
    "siumai",
    "siumai-core",
    "siumai-spec",
    "siumai-registry",
    "siumai-extras",
    "siumai-provider-openai",
    "siumai-provider-azure",
    "siumai-provider-openai-compatible",
    "siumai-protocol-openai",
    "siumai-provider-anthropic",
    "siumai-provider-anthropic-compatible",
    "siumai-protocol-anthropic",
    "siumai-provider-ollama",
    "siumai-provider-gemini",
    "siumai-protocol-gemini",
    "siumai-provider-google-vertex",
    "siumai-provider-groq",
    "siumai-provider-xai",
    "siumai-provider-minimaxi",
    "siumai-provider-deepseek",
    "siumai-provider-cohere",
    "siumai-provider-togetherai",
    "siumai-provider-amazon-bedrock",
]

[workspace.package]
version = "0.11.0-beta.6"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YumchaLabs/siumai"
homepage = "https://github.com/YumchaLabs/siumai"

[workspace.dependencies]
# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "form", "stream", "multipart", "gzip", "brotli"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util", "net", "process"] }
futures = "0.3"

# Streaming
bytes = "1"
futures-util = "0.3"
async-stream = "0.3"
eventsource-stream = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebSocket (for OpenAI WebSocket transport)
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# Error handling
thiserror = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Lazy static initialization
once_cell = "1.20"

# Tracing and observability
tracing = "0.1"

# Random number generation (for retry jitter)
rand = "0.8"

# URL encoding
urlencoding = "2.1"
infer = "0.19"

# Core crate (for workspace consumption)
# Disable default features; downstream crates must opt-in provider features explicitly
siumai = { version = "0.11.0-beta.6", path = "siumai", default-features = false }
siumai-core = { version = "0.11.0-beta.6", path = "siumai-core", default-features = false }
siumai-spec = { version = "0.11.0-beta.6", path = "siumai-spec", default-features = false }
siumai-registry = { version = "0.11.0-beta.6", path = "siumai-registry", default-features = false }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Retry mechanism
backoff = { version = "0.4", features = ["tokio"] }
lru = "0.16.2"
base64 = "0.22.1"

# Schema validation (for siumai-extras)
jsonschema = "0.33"

# Telemetry (for siumai-extras)
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "chrono"] }
tracing-appender = "0.2"
rmcp = "0.8"
proptest = "1.5"

# OpenTelemetry (for siumai-extras)
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-stdout = { version = "0.31", features = ["trace", "metrics"] }

# Server adapters (for siumai-extras)
axum = "0.8"

# Dev dependencies
tokio-test = "0.4"
mockito = "1.0"
wiremock = "0.6"
tracing-test = "0.2"
tempfile = "3.0"

[profile.dist]
inherits = "release"
lto = "thin"
