[package]
name = "siumai-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Protocol bridge helpers for siumai gateway and facade integrations"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-bridge"
keywords = ["llm", "ai", "protocol", "bridge"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-protocol-openai = { version = "0.11.0-beta.7", path = "../siumai-protocol-openai", default-features = false, optional = true }
siumai-protocol-anthropic = { version = "0.11.0-beta.7", path = "../siumai-protocol-anthropic", default-features = false, optional = true }
siumai-protocol-gemini = { version = "0.11.0-beta.7", path = "../siumai-protocol-gemini", default-features = false, optional = true }
serde_json.workspace = true
futures-util.workspace = true
base64 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
default = []

structured-messages = [
    "siumai-core/structured-messages",
    "siumai-protocol-openai?/structured-messages",
    "siumai-protocol-anthropic?/structured-messages",
    "siumai-protocol-gemini?/structured-messages",
]

openai = [
    "siumai-core/openai",
    "dep:siumai-protocol-openai",
    "siumai-protocol-openai/openai-standard",
    "siumai-protocol-openai/openai-responses",
]

anthropic = [
    "siumai-core/anthropic",
    "dep:base64",
    "dep:siumai-protocol-anthropic",
    "siumai-protocol-anthropic/anthropic-standard",
]

google = [
    "siumai-core/google",
    "dep:siumai-protocol-gemini",
    "dep:uuid",
    "siumai-protocol-gemini/google",
]

google-vertex = ["google"]

[dev-dependencies]
tokio.workspace = true
