[package]
name = "siumai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Provider-agnostic core for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-core"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-spec = { workspace = true, default-features = false }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = { workspace = true, optional = true }
reqwest.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true
once_cell.workspace = true

jsonrepair = { version = "0.1", optional = true, features = ["serde"] }

[features]
default = []

structured-messages = ["siumai-spec/structured-messages"]

openai = []
anthropic = []
google = []
ollama = []
xai = []
groq = []
minimaxi = []
cohere = []
togetherai = []
bedrock = []

gcp = ["dep:jsonwebtoken", "google"]
json-repair = ["dep:jsonrepair"]

gzip = []
brotli = []

all-providers = [
    "openai",
    "anthropic",
    "google",
    "ollama",
    "xai",
    "groq",
    "minimaxi",
    "cohere",
    "togetherai",
    "bedrock",
]

[dev-dependencies]
tokio-test.workspace = true
mockito.workspace = true
wiremock.workspace = true
tracing-test.workspace = true
tempfile.workspace = true
proptest.workspace = true
