[package]
name = "siumai-extras"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional utilities for siumai: schema validation, telemetry, and server adapters"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-extras"
readme = "README.md"
keywords = ["llm", "ai", "validation", "telemetry", "server"]
categories = ["api-bindings", "web-programming"]

# Use workspace-managed dependency versions
[dependencies]
# Core siumai dependency (disable default provider set; features forwarded below)
siumai = { workspace = true, default-features = false }

# Common dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Schema validation (optional)
jsonschema = { workspace = true, optional = true }

# Telemetry (optional)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }

# OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

# Server adapters (optional)
axum = { workspace = true, optional = true }
futures = { workspace = true }

# MCP integration (optional)
rmcp = { version = "0.8", optional = true, features = [
    "transport-io",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "macros",
    "client",
] }
async-trait = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
# Default to OpenAI only for minimal build; other providers can be enabled explicitly
default = ["openai"]

# Provider features (pass-through to siumai)
openai = ["siumai/openai", "dep:reqwest"]
anthropic = ["siumai/anthropic"]
google = ["siumai/google"]
ollama = ["siumai/ollama"]
xai = ["siumai/xai"]
groq = ["siumai/groq"]
minimaxi = ["siumai/minimaxi"]
all-providers = ["openai", "anthropic", "google", "ollama", "xai", "groq", "minimaxi"]

# Schema validation feature
schema = ["dep:jsonschema"]

# Telemetry feature (basic tracing)
telemetry = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]

# OpenTelemetry feature (full observability with traces and metrics)
opentelemetry = [
    "telemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-stdout",
    "dep:once_cell",
]

# Server adapters feature
server = ["dep:axum"]

# MCP integration feature
mcp = ["dep:rmcp"]

# Convenience feature to enable all extras
all = ["schema", "telemetry", "opentelemetry", "server", "mcp"]

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true

[[example]]
name = "opentelemetry_tracing"
path = "examples/opentelemetry_tracing.rs"
required-features = ["opentelemetry"]

[[example]]
name = "workflow_planner_coder"
path = "examples/workflow_planner_coder.rs"
required-features = ["openai"]

[[example]]
name = "orchestrator_structured_output"
path = "examples/orchestrator/structured-output.rs"
required-features = ["openai"]

[[example]]
name = "orchestrator_advanced_agent_features"
path = "examples/orchestrator/advanced-agent-features.rs"
required-features = ["openai"]

[[example]]
name = "openai-responses-gateway"
path = "examples/openai-responses-gateway.rs"
required-features = ["server", "google", "openai"]

[[example]]
name = "tool-loop-gateway"
path = "examples/tool-loop-gateway.rs"
required-features = ["server", "google", "openai"]
