[package]
name = "siumai-provider-anthropic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Anthropic provider implementation and protocol standard for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-provider-anthropic"
readme = "../README.md"
keywords = ["llm", "ai", "anthropic"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-provider-anthropic-compatible = { version = "0.11.0-beta.5", path = "../siumai-provider-anthropic-compatible", default-features = false, optional = true }

# Keep versions aligned with the workspace for consistent behavior.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true
once_cell.workspace = true

[features]
default = []

structured-messages = ["siumai-core/structured-messages", "siumai-provider-anthropic-compatible/structured-messages"]

anthropic-standard = [
    "siumai-core/anthropic",
    "dep:siumai-provider-anthropic-compatible",
    "siumai-provider-anthropic-compatible/anthropic-standard",
]

anthropic = ["anthropic-standard"]
