[package]
name = "siumai-provider-gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Google Gemini provider implementation for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-provider-gemini"
readme = "../README.md"
keywords = ["llm", "ai", "gemini", "google"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-protocol-gemini = { version = "0.11.0-beta.5", path = "../siumai-protocol-gemini", default-features = false }

# Keep versions aligned with the workspace for consistent behavior.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true

[features]
default = []

structured-messages = ["siumai-core/structured-messages", "siumai-protocol-gemini/structured-messages"]

# Matches the feature name used by downstream crates (`siumai-providers` uses `google`).
google = ["siumai-core/google", "siumai-protocol-gemini/google"]

# Optional JSON repair utilities used by Gemini streaming helpers.
json-repair = ["siumai-core/json-repair", "siumai-protocol-gemini/json-repair"]
