[package]
name = "siumai-provider-minimaxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MiniMaxi provider implementation for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-provider-minimaxi"
readme = "../README.md"
keywords = ["llm", "ai", "minimaxi"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-provider-openai = { version = "0.11.0-beta.5", path = "../siumai-provider-openai", default-features = false }
siumai-provider-anthropic = { version = "0.11.0-beta.5", path = "../siumai-provider-anthropic", default-features = false }

# Keep versions aligned with the workspace for consistent behavior.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true
once_cell.workspace = true
hex = { version = "0.4.3", optional = true }

[features]
default = []

structured-messages = [
    "siumai-core/structured-messages",
    "siumai-provider-openai/structured-messages",
    "siumai-provider-anthropic/structured-messages",
]

minimaxi = [
    "dep:hex",
    "siumai-core/minimaxi",
    "siumai-provider-openai/openai-standard",
    "siumai-provider-anthropic/anthropic-standard",
]
